cmake_minimum_required(VERSION 3.6)
project(migra_gapbs)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_COMPILER g++)
# set(CMAKE_CXX_FLAGS "-qopenmp")

include_directories("./src")
include_directories("./include")
#include_directories("/Users/yunmingzhang/Documents/Research/google_hash/sparsehash/install_dir/include")
add_executable(pr src/pr.cc)
add_executable(bc src/bc.cc)
add_executable(bfs src/bfs.cc)
add_executable(converter src/converter.cc)
add_executable(me src/multi_hop_simple_rec.cc)